# badminton-bot

./: .gitignore  CMakeLists.txt  README.md
config/: calibration.yaml  camera.yaml  detection.yaml  ekf.yaml
src/: capture_calibration.cpp  capture_trajectories.cpp  depth_verify.cpp  diff_detect.cpp  diff_detect_single.cpp  dump_nodes.cpp  preview.cpp  realtime.cpp  replay_trajectory.cpp
src/core/: birdie_dynamics.cpp  birdie_dynamics.hpp  camera.cpp  camera.hpp  config.cpp  config.hpp  detector.cpp  detector.hpp  ekf.cpp  ekf.hpp  landing_predictor.cpp  landing_predictor.hpp  stereo.cpp  stereo.hpp  timing.cpp  timing.hpp  tracker.cpp  tracker.hpp  types.hpp
tools/: calibrate_court.py  capture_calibration.py  configure_cameras.py  fit_alpha.py  generate_board.py  stereo_calibrate.py  trim_trajectory.py
